# hello_rocket

./: Cargo.toml  Rocket.toml
src/: main.rs
static/: index.tera
