[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["César Almeida <cesargralmeida@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
default_features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve"]
